k8s/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookstore
  labels:
    name: bookstore
