k8s/manifests/book-author-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-author-service
  namespace: bookstore
spec:
  selector: # поиск всех подов по ключевому имени
    app: book-author-service
  ports:
    - port: 8088 # порт снаружи
      targetPort: 8088
      protocol: TCP
      name: http
  type: ClusterIP
