k8s/manifests/bookstore-book-author-iphash.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstore-book-author-iphash
  namespace: bookstore
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    # Прямое хеширование по IP клиента
    nginx.ingress.kubernetes.io/upstream-hash-by: "$remote_addr"
    # Важно: отключи connection pooling, чтобы hash был более явный
    nginx.ingress.kubernetes.io/keepalive-connections: "0"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /iphash/book-store(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: book-author-service
                port:
                  number: 8088
