k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstore-ingress
  namespace: bookstore
spec:
  ingressClassName: nginx
  rules: # правила маршрутизации
    - http:
        paths:
          - path: /api/book-store
            pathType: Prefix # совпадение по префиксу выше
            backend: # куда отправляется трафик
              service:
                name: book-store-service # ingress отправит сюда трафик
                port:
                  number: 8088
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: users-service
                port:
                  number: 8089
